syntax = "proto3";

package erda.apps.aiproxy.mcp_server.filesystem;
option go_package = "github.com/erda-project/erda-proto-go/apps/aiproxy/mcp_server/filesystem/pb";

import "google/api/annotations.proto";
import "apps/aiproxy/metadata/metadata.proto";
import "google/protobuf/timestamp.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "common/http.proto";

message FileUploadRequest {
}

message FileUploadResponse {
  string file_id = 1;
  string url = 2;
  google.protobuf.Timestamp uploaded_at = 3;
}

message DeleteFileRequest {
  string file_id = 1;
}

message DeleteFileResponse {
  string msg = 1;
}

service FileSystemService {
  rpc UploadFile(FileUploadRequest) returns (FileUploadResponse) {
    option (google.api.http) = {
      post: "/api/ai-proxy/mcp-server/filesystem/file/upload"
      body: "*"
    };
  }

  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {
    option (google.api.http) = {
      delete: "/api/ai-proxy/mcp-server/filesystem/file/{file_id}"
    };
  }
}
